feat: 新增结果分享图片导出功能并更新站点元数据
- 集成 `html-to-image` 库，支持将抽取结果导出为 PNG 图片
- 在结果弹窗中添加导出状态处理、水印信息及 UI 过滤逻辑
- 更新 `layout.tsx` 中的站点标题为“JX3 JJC心法盲盒”并完善描述信息
- 新增 `html-to-image` 依赖包

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chinese-fonts/hcqyt": "^2.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.363.0",
     "next": "16.0.10",
     "react": "19.0.0",
